--- a/Src/Niagara.vcxproj.filters
+++ b/Src/Niagara.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClInclude Include="Device.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="VkInitializers.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\Shaders\SimpleTriangle.frag.glsl">
