--- a/Src/Niagara.vcxproj.filters
+++ b/Src/Niagara.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="Pipeline.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Image.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\External\glfw\src\platform.h">
@@ -201,6 +204,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Pipeline.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Image.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
