--- a/Src/Niagara.vcxproj
+++ b/Src/Niagara.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="..\External\SPIRV-Cross\spirv_glsl.cpp" />
     <ClCompile Include="..\External\SPIRV-Cross\spirv_parser.cpp" />
     <ClCompile Include="..\External\volk\volk.c" />
+    <ClCompile Include="CommandManager.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
@@ -212,6 +213,7 @@
     <ClInclude Include="..\External\SPIRV-Cross\spirv_parser.hpp" />
     <ClInclude Include="..\External\volk\volk.h" />
     <None Include="..\Shaders\MeshCommon.h" />
+    <ClInclude Include="CommandManager.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="pch.h" />
