--- a/Src/Niagara.vcxproj.filters
+++ b/Src/Niagara.vcxproj.filters
@@ -189,6 +189,12 @@
     <ClCompile Include="CommandManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RenderPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="VkCommon.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\External\glfw\src\platform.h">
@@ -258,6 +264,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CommandManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="VkCommon.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
